--- a/analiza_1.tex
+++ b/analiza_1.tex
@@ -1396,7 +1396,7 @@ $f\circ g$ jest funkcją różniczkowalną w punkcie $a$ i ma pochodną
     Niech $f:\R\supset A\to f(A)\subset \R$ będzie funkcją różnowartościową, różniczkowalną w $a\in A$.
     Jeśli $f'(a)\ne0$ i $f^{-1}$ jest ciągła w $f(a)$, to $f^{-1}$ jest różniczkowalna w $f(a)$ i zachodzi wzór
     \begin{equation*}
-        \left( f^{-1} \right)'(f(x))=\frac{1}{f'(x)}.
+        \left( f^{-1} \right)'(f(a))=\frac{1}{f'(a)}.
     \end{equation*}
 \end{twier}
 \bigskip
