--- a/analiza_1.tex
+++ b/analiza_1.tex
@@ -1581,11 +1581,9 @@ Zazwyczaj w definiowaniu funkcji wypukłej i wklęsłej korzysta się z pojęcia
 \begin{twier}{Wzór Taylora z resztą w postaci Peano 8.18}
     Niech $f:(a,b)\to\R$ i $x_0\in(a,b)$. Jeśli $f$ ma $(n-1)$ pochodnych na $(a,b)$ i $n$-tą pochodną w punkcie $x_0$, to
     \begin{equation*}
-        f(x)=\sum_{k=0}^{n}{\frac{f^{(k)}(x_0)}{k!}(x-x_0)^k}+R_n(x,x_0),\quad \lim_{x\to x_0}{\frac{R_n(x,x_0)}{(x-x_0)^i}}=0.
+        f(x)=\sum_{k=0}^{n}{\frac{f^{(k)}(x_0)}{k!}(x-x_0)^k}+R_n(x,x_0),\quad \lim_{x\to x_0}{\frac{R_n(x,x_0)}{(x-x_0)^n}}=0.
     \end{equation*}
 \end{twier}
-
-Zamiast podawać warunek po przecinku, pisze się czasem $R_n(x,x_0)=o(x^i)$ dla $x\to0$. Symbol ten to \textit{o małe}; napis $f(x)=o(g(x))$ dla $x\to a$ oznacza, że $\lim_{x\to a}{f(x)/g(x)}=0$. Wzór Taylora z resztą w postaci Peano dla $x_0=0$ nazywamy \textit{wzorem Maclaurina}.
 
 \begin{twier}{Wzór Taylora z resztą w postaci Cauchy'ego i Lagrange'a 8.19}
     Niech $f:(a,b)\to\R$ ma w przedziale $(a,b)$ pochodne rzędu $(n+1)$ włącznie, wówczas\medskip
